--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <a href="https://www.youtube.com/user/sn211256">YouTube</a> <br>
 <a href="https://www.facebook.com/nisanyan">Facebook</a> <br>
 <a href="mailto:sevan@nisanyan.com">E-mail</a> <br>
-<a href="https://www.nisanyansozluk.com/">Nişanyan Sözlük"</a> <br>
-<a href="https://turkadlar.com/">Nişanyan Adlar"</a> <br>
+<a href="https://www.nisanyansozluk.com/">Nişanyan Sözlük</a> <br>
+<a href="https://turkadlar.com/">Nişanyan Adlar</a> <br>
 <a href="https://nisanyanmap.com/">Index Anatolicus</a> <br>
 </body>
 </html>
